--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
+    "dotenv-webpack": "^7.1.0",
     "vue": "^2.6.14"
   },
   "devDependencies": {
